<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="interceptRule"
            type="com.sdk.samples.topics.InterceptionRule" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:elevation="@dimen/cardview_default_elevation"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rule_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/instruction_style"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="2dp"
        android:layout_marginBottom="12dp"/>

    <ImageButton
        android:id="@+id/remove_rule"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toTopOf="@id/rule_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/rule_type"
        android:src="@android:drawable/ic_input_delete"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete_rule"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/instruction_style"
        android:text="@string/element_type_label"
        app:layout_constraintTop_toTopOf="@id/element_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/element_type"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"/>

    <Spinner
        android:id="@+id/element_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="@{interceptRule.type}"
        android:entries="@array/element_types"
        android:prompt="@string/select_for_interception"
        android:spinnerMode="dropdown"
        android:background="@drawable/dropdown_back"
        android:popupBackground="@drawable/dropdown_back"

app:layout_constraintTop_toBottomOf="@id/rule_type"
        app:layout_constraintStart_toEndOf="@id/type_label"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp" />

    <CheckBox
        android:id="@+id/restrict_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/live_chat_rule"
        android:checked="@{interceptRule.liveScope}"
        android:minHeight="25dp"
        app:layout_constraintTop_toBottomOf="@id/element_type"
        app:layout_constraintStart_toStartOf="@id/type_label"/>



</androidx.constraintlayout.widget.ConstraintLayout>

</layout>