<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/create_interception_rules"
        style="@style/instruction_style"/>

        <LinearLayout
            android:id="@+id/buttonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    <Button
        android:id="@+id/interception_rule"
        style="@style/submit_view_small"
        android:layout_width="0dp"
        android:layout_weight=".5"
        android:layout_height="wrap_content"
android:padding="0dp"
        android:textSize="12sp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_gravity="left"
        android:text="@string/create_intercept_rule" />

    <Button
        android:id="@+id/announcement_rule"
        style="@style/submit_view_small"
        android:layout_width="0dp"
        android:layout_weight=".5"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textSize="12sp"
        android:text="@string/create_announce_rule"
        android:padding="0dp"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/main_button_idle"
            android:padding="4dp">

            <LinearLayout
                android:id="@+id/rules_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:dividerPadding="10dp"/>

        </ScrollView>

        <Button
                android:id="@+id/start_chat_rules"
                style="@style/submit_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="16dp"
                android:text="@string/start_chat" />

        </LinearLayout>

</layout>